# goldfish

./: .gitignore  .gitmodules  CMakeLists.txt  Cargo.toml  Dockerfile  GolfAtHome.sln  GolfAtHome.vcxproj  GolfAtHome.vcxproj.filters  LICENSE  Makefile  README.md  build.rs  sh.sh
core/: CMakeLists.txt
core/src/finders/: AbstractFinder.cpp  AbstractFinder.h  finder_bridge.cpp  finder_bridge.h  main.cpp
core/src/generators/: AbstractPrecomputeGenerator.cpp
core/src/lib/RP/: RPGolDefine.h  RPGolWindSet.h
server/: .gitignore  Cargo.toml  build.rs
server/src/: ffi.rs  main.rs
server/src/core/: BlinkGroup.h  CMakeLists.txt  WindArgParser.cpp  types.h  util_zlib.cpp  util_zlib.h
server/src/core/finders/: AbstractFinder.h  ExactMatchFinder.h  OgBlinkFinder.h  OgWindFinder.h  TopNFinder.h  WsrWindFinder.h  finder_bridge.cpp  finder_bridge.h  main.cpp
server/src/core/generators/: AbstractPrecomputeGenerator.h  OgBlinkPrecomputeGenerator.h  OgWindPrecomputeGenerator.h  WsrWindPrecomputeGenerator.h  main.cpp
server/src/core/lib/RP/: RPGolConfig.cpp  RPGolConfig.h  RPGolDefine.h  RPGolDifficulty.h  RPGolWindSet.cpp  RPGolWindSet.h  RPKokeshiBlinkMgr.h  RPUtlRandom.cpp  RPUtlRandom.h
server/src/routes/: blink.rs  og_wind.rs  wind2seed.rs
src/: DifficultyInfo.h  GolfWind.cpp  GolfWind.h  WindArgParser.cpp  WindArgParser.h  ffi.rs  finder.cpp  main.cpp  main.rs  types.h
src/core/: README.md  util_zlib.h
src/core/finders/: AbstractFinder.h  OgWindFinder.h  finder_bridge.cpp  finder_bridge.h  main.cpp
src/core/lib/RP/: RPGolConfig.cpp  RPGolConfig.h  RPUtlRandom.h
src/core/lib/rvl/: OSTime.cpp  OSTime.h
src/generators/: AbstractPrecomputeGenerator.cpp  AbstractPrecomputeGenerator.h  OgWindPrecomputeGenerator.h  main.cpp
src/lib/: PPC.H
src/lib/RP/: RPGlfConfig.cpp  RPGlfConfig.h  RPGlfDefine.h  RPGlfWindSet.cpp  RPGlfWindSet.h  RPGolConfig.cpp  RPGolConfig.h  RPGolDefine.h  RPGolDifficulty.h  RPGolWindSet.cpp  RPGolWindSet.h  RPUtlRandom.cpp  RPUtlRandom.h
src/lib/rvl/: OSTime.cpp  OSTime.h
src/routes/: og_wind.rs
(+3 files in other folders)
